--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
 	implementation 'org.modelmapper:modelmapper:2.3.9'
 	compile 'org.modelmapper:modelmapper:2.3.9'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
