--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,12 @@ repositories {
 }
 
 dependencies {
+	implementation group: "com.twilio.sdk", name: "twilio", version: "8.8.0"
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
 	implementation 'org.modelmapper:modelmapper:2.3.9'
-	compile 'org.modelmapper:modelmapper:2.3.9'
+	implementation 'org.modelmapper:modelmapper:2.3.9'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
